# controller/c_user/c_user.go
@@ -5,11 +5,46 @@ import (
 	"github.com/astaxie/beego/validation"
 	"github.com/gin-gonic/gin"
 	"net/http"
-	"time"
-	"whacos/models"
 	"whacos/models/m_user"
+	"whacos/pkg/app"
 	"whacos/pkg/e"
+	"whacos/pkg/logging"
+	"whacos/service/s_user"
 )
+
+type ListUserForm struct {
+	app.CommonForm
+	Username string `form:"username" json:"username"`
+	Name     string `form:"name" json:"name"`
+	IdCard   string `form:"idCard" json:"idCard" valid:"MaxSize(18)"`
+}
+
+type AddUserForm struct {
+	Username string `form:"username" json:"username" valid:"Required MaxSize(50)"`
+	Name     string `form:"name" json:"name" valid:"Required MaxSize(18)"`
+	IdCard   string `form:"idCard" json:"idCard" valid:"Required MaxSize(18)"`
+	Email    string `form:"email" json:"email" valid:"Required MaxSize(64)"`
+	Mobile   string `form:"mobile" json:"mobile" valid:"Required MaxSize(15)"`
+	Sex      string `form:"sex" json:"sex" valid:"Required MaxSize(1)"`
+}
+
+type EditUserForm struct {
+	Username    string `swaggo:"true,用户名" json:"username" valid:"Required MaxSize(50)"`
+	Name        string `json:"name" valid:"Required MaxSize(50)"`
+	DeptId      int    `json:"deptId" valid:"Required MaxSize(20)"`
+	Email       string `json:"email" valid:"Required MaxSize(64)"`
+	Mobile      string `json:"mobile" valid:"Required MaxSize(15)"`
+	IdCard      string `json:"idCard" valid:"Required MaxSize(18)"`
+	Status      int    `json:"status" valid:"Required MaxSize(1)"`
+	Sex         int    `json:"sex" valid:"Required MaxSize(1)"`
+	PicId       int    `json:"picId" valid:"Required MaxSize(20)"`
+	LiveAddress string `json:"liveAddress" valid:"Required MaxSize(50)"`
+	Hobby       string `json:"hobby" valid:"Required MaxSize(50)"`
+	Province    string `json:"province" valid:"Required MaxSize(50)"`
+	City        string `json:"city" valid:"Required MaxSize(50)"`
+	District    string `json:"district" valid:"Required MaxSize(50)"`
+	Remarks     string `json:"remarks" valid:"Required MaxSize(255)"`
+}
 
 // @Tags 系统用户相关
 // @Resource Name
@@ -18,6 +53,7 @@ import (
 // @Produce json
 // @Param id path string true "id"
 // @Success 200 {object} app.Response
+// @Failure 400 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /sys/user/get/{id} [GET]
 func GetUser(c *gin.Context) {
@@ -46,22 +82,24 @@ func GetUser(c *gin.Context) {
 // @Summary 查询用户列表
 // @Accept json
 // @Produce json
-// @Param username query string true "username"
-// @Param password query string true "password"
+// @Param listUser body c_user.ListUserForm true "listUserForm"
 // @Success 200 {object} app.Response
+// @Failure 400 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /sys/user/list [POST]
 func ListUser(c *gin.Context) {
 
+	appGin := app.Gin{C: c}
+	userForm := ListUserForm{}
+	if c.BindJSON(&userForm) != nil {
+		appGin.ResponseInvalidParams(nil)
+	}
+
 	maps := make(map[string]interface{})
 	//maps["status"] = 1
-	userList := m_user.SelectUserList(1, 20, maps)
+	userList := m_user.SelectUserList(userForm.PageNum, userForm.PageSize, maps)
 
-	c.JSON(http.StatusOK, gin.H{
-		"code": e.Success,
-		"msg":  "请求成功",
-		"data": userList,
-	})
+	appGin.ResponseSuccess(userList)
 }
 
 // @Tags 系统用户相关
@@ -69,47 +107,29 @@ func ListUser(c *gin.Context) {
 // @Summary 新增用户
 // @Accept json
 // @Produce json
-// @Param username query string true "username"
-// @Param password query string true "password"
+// @Param addUser body c_user.AddUserForm true "addUserForm"
 // @Success 200 {object} app.Response
+// @Failure 400 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /sys/user/add [POST]
 func AddUser(c *gin.Context) {
-	username := c.PostForm("username")
-	email := c.Query("email")
-	idCard := c.Query("idCard")
-	sex, _ := com.StrTo(c.Query("sex")).Int()
-	birth := c.Query("birth")
+	appGin := app.Gin{C: c}
 
-	valid := validation.Validation{}
-	valid.Required(username, "username").Message("用户名不能为空！")
-	valid.Required(email, "email").Message("电子邮箱不能位空！")
-	valid.Required(idCard, "idCard").Message("身份证账号不能位空！")
-	valid.Required(sex, "sex").Message("性别不能位空！")
-	valid.Required(birth, "birth").Message("出身日期不能位空！")
+	addUserForm := AddUserForm{}
 
-	user := &m_user.User{
-		Username: username,
-		Email:    email,
-		IdCard:   idCard,
-		Sex:      sex,
-		Birth:    time.Now(),
-		Model: models.Model{
-			CreatedBy:   1,
-			CreatedTime: time.Now(),
-			UpdatedBy:   1,
-			UpdatedTime: time.Now(),
-			DelFlag:     1,
-		},
+	if err := c.BindJSON(&addUserForm); err != nil {
+		appGin.ResponseInvalidParams(nil)
+		logging.Info(err.Error())
+		return
+	}
+	user := s_user.UserDTO{}
+
+	if result, err := user.Create(user); err != nil {
+		appGin.ResponseFail(nil)
+	} else {
+		appGin.ResponseSuccess(result)
 	}
 
-	result := m_user.InsertUser(user)
-
-	c.JSON(http.StatusOK, gin.H{
-		"code": e.Success,
-		"msg":  "请求成功",
-		"data": result,
-	})
 }
 
 // @Tags 系统用户相关
@@ -117,9 +137,9 @@ func AddUser(c *gin.Context) {
 // @Summary 修改用户信息
 // @Accept json
 // @Produce json
-// @Param username query string true "username"
-// @Param password query string true "password"
+// @Param editUser body c_user.EditUserForm true "editUserForm"
 // @Success 200 {object} app.Response
+// @Failure 400 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /sys/user/edit [PUT]
 func EditUser(c *gin.Context) {
@@ -133,10 +153,11 @@ func EditUser(c *gin.Context) {
 // @Produce json
 // @Param id path string true "id"
 // @Success 200 {object} app.Response
+// @Failure 400 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /sys/user/remove/{id} [DELETE]
 func RemoveUser(c *gin.Context) {
-	id, _ := com.StrTo(c.Param("id")).Int()
+	id, _ := com.StrTo(c.Query("id")).Int()
 
 	valid := validation.Validation{}
 
